# VQ-VAE

./: README.md  evaluate.py  pyproject.toml  train.py
dataset/: augmentation.py  dataloader.py
model/: __init__.py  blocks.py  decoder.py  encoder.py  quantizer.py  vqvae.py
trainer/: __init__.py  trainer.py
